@@ -33,6 +33,7 @@
 #include <qlineedit.h>
 #include <qradiobutton.h>
 #include <qspinbox.h>
+#include <qvbuttongroup.h>
 
 #include "kchart_params.h"
 
@@ -43,33 +44,21 @@ KChartParameterPieConfigPage::KChartParameterPieConfigPage( KChartParams* params
                                                             QWidget* parent ) :
     QWidget( parent ),_params( params )
 {
-    QGridLayout *grid1 = new QGridLayout(this,2,2,KDialog::marginHint(), KDialog::spacingHint());
-    QGroupBox* gb3 = new QGroupBox( i18n( "Parameter" ), this );
-    QGridLayout *grid3 = new QGridLayout(gb3,4,2,KDialog::marginHint(), KDialog::spacingHint());
+    QVBoxLayout *grid1 = new QVBoxLayout(this);
+    QVButtonGroup* gb = new QVButtonGroup( i18n( "Parameter" ), this );
+    grid1->addWidget(gb);
 
-    pie3d=new QCheckBox(i18n("Pie 3D"),gb3);
-    grid3->addWidget(pie3d,2,0);
+    pie3d = new QCheckBox(i18n("Pie 3D"), gb);
+    drawShadowColor=new QCheckBox(i18n("Draw shadow color"), gb);
 
-    drawShadowColor=new QCheckBox(i18n("Draw shadow color"),gb3);
-    grid3->addWidget(drawShadowColor,3,0);
+    QLabel *label = new QLabel( i18n( "Start:" ), gb );
+    angle = new QSpinBox(0, 90, 1, gb);
 
-    QLabel *label = new QLabel( i18n( "Start:" ), gb3 );
-    label->resize( label->sizeHint() );
-    grid3->addWidget( label,4,0);
+    label = new QLabel( i18n( "3D-depth:" ), gb );
+    depth = new QSpinBox(0, 40, 1, gb);
 
-    angle = new QSpinBox(0, 90, 1, gb3);
-    angle->resize(100, angle->sizeHint().height() );
-    grid3->addWidget( angle,5,0);
+    grid1->activate();
 
-    label = new QLabel( i18n( "3D-depth:" ), gb3 );
-    label->resize( label->sizeHint() );
-    grid3->addWidget( label,6,0);
-
-    depth = new QSpinBox(0, 40, 1, gb3);
-    depth->resize(100, depth->sizeHint().height() );
-    grid3->addWidget( depth,7,0);
-
-    grid1->addWidget(gb3,0,0);
     connect(pie3d,SIGNAL(toggled ( bool )),this, SLOT(active3DPie(bool)));
 }
 
