@@ -1,3 +1,6 @@
+2005-04-05  Fredrik Edemar  <f_edemar@linux.se>
+    * Use a better layout in KChartParameterPieConfigPage and KChartParameterPolarConfigPage.
+
 2005-04-04  Fredrik Edemar  <f_edemar@linux.se>
     * Add the "Create Template From Document" feature to the File menu.
     * The activate-3D property is now the same for bar charts and pie charts so that it is possible to switch between those modes without loosing the setting (this is what the user expects IMHO).
